tests/fsharp/typecheck/sigs/neg42.bsl

neg42.fsi(2,20,3,1): parse error FS0010: Incomplete structured construct at or before this point in signature file. Expected ':', '=' or other token.
